// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`helpers should properly emit helpers file: helpers 1`] = `
"\\"use strict\\";
Object.defineProperty(exports, \\"__esModule\\", { value: true });
exports.transformInfoIntoPrismaArgs = transformInfoIntoPrismaArgs;
exports.getPrismaFromContext = getPrismaFromContext;
exports.transformCountFieldIntoSelectRelationsCount = transformCountFieldIntoSelectRelationsCount;
const tslib_1 = require(\\"tslib\\");
const graphql_fields_1 = tslib_1.__importDefault(require(\\"graphql-fields\\"));
function transformInfoIntoPrismaArgs(info) {
    const fields = (0, graphql_fields_1.default)(info, {}, {
        excludedFields: [\\"__typename\\"],
        processArguments: true,
    });
    return transformFields(fields);
}
function transformFields(fields) {
    return Object.fromEntries(
        Object.entries(fields).map(([key, value]) => {
            if (Object.keys(value).length === 0) {
                return [key, true];
            }
            if (\\"__arguments\\" in value) {
                return [key, Object.fromEntries(
                    value.__arguments.map(argument => {
                        const [[argumentKey, { value: argumentValue }]] = Object.entries(argument);
                        return [argumentKey, argumentValue];
                    }),
                )];
            }
            return [key, transformFields(value)];
        }),
    );
}
function getPrismaFromContext(context) {
    const prismaClient = context[\\"prisma\\"];
    if (!prismaClient) {
        throw new Error(\\"Unable to find Prisma Client in GraphQL context. Please provide it under the \`context[\\\\\\\\\\\\\\"prisma\\\\\\\\\\\\\\"]\` key.\\");
    }
    return prismaClient;
}
function transformCountFieldIntoSelectRelationsCount(_count) {
    return {
        include: {
            _count: {
                select: {
                    ...Object.fromEntries(Object.entries(_count).filter(([_, value]) => value != null)),
                },
            },
        },
    };
}
"
`;

exports[`helpers when contextPrismaKey generator option is set should properly generate \`getPrismaFromContext\`: helpers 1`] = `
"\\"use strict\\";
Object.defineProperty(exports, \\"__esModule\\", { value: true });
exports.transformInfoIntoPrismaArgs = transformInfoIntoPrismaArgs;
exports.getPrismaFromContext = getPrismaFromContext;
exports.transformCountFieldIntoSelectRelationsCount = transformCountFieldIntoSelectRelationsCount;
const tslib_1 = require(\\"tslib\\");
const graphql_fields_1 = tslib_1.__importDefault(require(\\"graphql-fields\\"));
function transformInfoIntoPrismaArgs(info) {
    const fields = (0, graphql_fields_1.default)(info, {}, {
        excludedFields: [\\"__typename\\"],
        processArguments: true,
    });
    return transformFields(fields);
}
function transformFields(fields) {
    return Object.fromEntries(
        Object.entries(fields).map(([key, value]) => {
            if (Object.keys(value).length === 0) {
                return [key, true];
            }
            if (\\"__arguments\\" in value) {
                return [key, Object.fromEntries(
                    value.__arguments.map(argument => {
                        const [[argumentKey, { value: argumentValue }]] = Object.entries(argument);
                        return [argumentKey, argumentValue];
                    }),
                )];
            }
            return [key, transformFields(value)];
        }),
    );
}
function getPrismaFromContext(context) {
    const prismaClient = context[\\"samplePrisma\\"];
    if (!prismaClient) {
        throw new Error(\\"Unable to find Prisma Client in GraphQL context. Please provide it under the \`context[\\\\\\\\\\\\\\"samplePrisma\\\\\\\\\\\\\\"]\` key.\\");
    }
    return prismaClient;
}
function transformCountFieldIntoSelectRelationsCount(_count) {
    return {
        include: {
            _count: {
                select: {
                    ...Object.fromEntries(Object.entries(_count).filter(([_, value]) => value != null)),
                },
            },
        },
    };
}
"
`;
